--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>Angular Data</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
+  <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
-
+  
   <script src="js/lib/angular/angular.min.js"></script>
   <script src="js/lib/angular/angular-route.min.js"></script>
   <script src="js/lib/angular/angular-animate.min.js"></script>
