--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -10,6 +10,7 @@
   <script src="js/lib/angular/angular-route.min.js"></script>
   <script src="js/lib/angular/angular-animate.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/services/authentication.js"></script>
   <script src="js/controllers/registration.js"></script>
   <script src="js/controllers/meetings.js"></script>
 
