--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -13,6 +13,7 @@
   <script src="js/services/authentication.js"></script>
   <script src="js/controllers/registration.js"></script>
   <script src="js/controllers/meetings.js"></script>
+  <script src="js/controllers/status.js"></script>
 
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
@@ -20,9 +21,15 @@
 </head>
 <body>
 <header>
-  <nav class="cf" ng-include="'views/nav.html'"></nav>
+  <nav class="cf" ng-include="'views/nav.html'"
+    ng-controller="StatusController"></nav>
 </header>
 <div class="page">
+  <div class="userinfo"
+    ng-controller="StatusController" ng-show="userEmail">
+      <span class="user">Hi {{userEmail}}</span>
+      <a href="">Logout</a>
+  </div>
   <main class="cf" ng-view></main>
 </div>
 </body>
