--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -10,9 +10,9 @@
   <script src="js/lib/angular/angular-route.min.js"></script>
   <script src="js/lib/angular/angular-animate.min.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/services/authentication.js"></script>
   <script src="js/controllers/registration.js"></script>
-  <script src="js/controllers/meetings.js"></script>
+  <script src="js/services/authentication.js"></script>
+  <script src="js/controllers/meetings.js"></script>s
   <script src="js/controllers/status.js"></script>
 
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
