--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -26,8 +26,8 @@
 </header>
 <div class="page">
   <div class="userinfo"
-    ng-controller="StatusController" ng-show="userEmail">
-      <span class="user">Hi {{userEmail}}</span>
+    ng-controller="StatusController" ng-show="currentUser">
+      <span class="user">Hi {{currentUser.firstname}}</span>
       <a href="#/" ng-click="logout()">Logout</a>
   </div>
   <main class="cf" ng-view></main>
