--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -14,6 +14,7 @@
   <script src="js/services/authentication.js"></script>
   <script src="js/controllers/meetings.js"></script>s
   <script src="js/controllers/status.js"></script>
+  <script src="js/controllers/checkIns.js"></script>
 
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
@@ -28,7 +29,7 @@
   <div class="userinfo"
     ng-controller="StatusController" ng-show="signedIn()">
       <span class="user">Hi {{currentUser.firstname}}</span>
-      <a href="#/" ng-click="logout()">Logout</a>
+      <a href="#/" ng-click="logout()" ng-href="#/login">Logout</a>
   </div>
   <main class="cf" ng-view></main>
 </div>
